--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browser-router": "^0.2.0",
     "framer-motion": "^10.12.16",
     "google-map-react": "^2.2.1",
+    "gsap": "^3.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
